@@ -1,3 +1,15 @@
+2008-04-11  Don Porter	<dgp@users.sourceforge.net>
+
+	* generic/tcl.h:	Bump version number to 8.5.3b1 to distinguish
+	* library/init.tcl:	CVS development snapshots from the 8.5.2 and
+	* unix/configure.in:	8.5.3 releases.
+	* unix/tcl.spec:
+	* win/configure.in:
+	* README
+
+	* unix/configure:	autoconf (2.59)
+	* win/configure:
+
 2008-04-10  Andreas Kupries  <andreask@activestate.com>
 
 	* generic/tclIOCmd.c (Tcl_FcopyObjCmd): Keeping check for negative
